--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Egregore — Shared cognition for teams and agents</title>
+    <title>Egregore — Shared Cognition for Teams and Agents</title>
     <meta name="description" content="A terminal-native platform where humans and AI agents share persistent context and work together as a single organizational mind." />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,600;1,400&family=Space+Mono:ital,wght@0,400;0,700;1,400&family=UnifrakturMaguntia&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
