--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>
+      <h1>Egregore — Shared Cognition for Teams and Agents</h1>
+      <p>A terminal-native platform where humans and AI agents share persistent context and work together as a single organizational mind. Built on Claude Code, Git-based shared memory, and a Neo4j knowledge graph.</p>
+      <h2>Research</h2>
+      <ul>
+        <li><a href="/research/towards-shared-minds">Towards Shared Minds</a> by Cem Dagdelen</li>
+        <li><a href="/research/context-gardening">Context Gardening</a> by Cem Dagdelen</li>
+      </ul>
+      <h2>Documentation</h2>
+      <p><a href="/docs">Read the docs</a> — installation, commands, architecture, and configuration.</p>
+      <p><a href="/llms-full.txt">Full site content as plain text</a></p>
+    </noscript>
     <script type="module" src="/src/main.jsx"></script>
     <!-- 100% privacy-first analytics -->
     <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
